Update copyright message on inline-detox.1 and fix minor typo.  Update detox.1 to link to inline-detox.1.

--- a/detox.1
+++ b/detox.1
@@ -139,6 +139,7 @@ Will list the sequences within
 showing their filters and options.
 .El
 .Sh SEE ALSO
+.Xr inline-detox 1 ,
 .Xr detoxrc 5 ,
 .Xr detox.tbl 5 .
 .Sh HISTORY
