--- a/inline-detox.1
+++ b/inline-detox.1
@@ -1,5 +1,5 @@
 .\" 
-.\" Copyright (c) 2004-2006, Doug Harple.  All rights reserved.
+.\" Copyright (c) 2004-2017, Doug Harple.  All rights reserved.
 .\" 
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions are
@@ -46,7 +46,7 @@ The
 utility can remove spaces and other such annoyances from streams.
 It'll also translate or cleanup Latin-1 (ISO 8859-1) characters encoded
 in 8-bit ASCII, Unicode characters encoded in UTF-8, and CGI escaped characters.
-Basically its detox, but does not operate on files.
+Basically it's detox, but does not operate on files.
 .Ss Sequences
 .Nm
 is driven by a configurable series of filters, called a sequence.
