--- a/man/inline-detox.1
+++ b/man/inline-detox.1
@@ -15,8 +15,8 @@
 .Sh SYNOPSIS
 .Nm
 .Op Fl hnLrv
-.Op Fl s sequence
-.Op Fl f configfile
+.Op Fl s Ar sequence
+.Op Fl f Ar configfile
 .Ar
 .Sh DESCRIPTION
 The
