--- a/man/inline-detox.1
+++ b/man/inline-detox.1
@@ -6,18 +6,26 @@
 .\" For the full copyright and license information, please view the LICENSE
 .\" file that was distributed with this source code.
 .\" 
-.Dd February 11, 2021
-.Dt DETOX 1
+.Dd February 12, 2021
+.Dt INLINE-DETOX 1
 .Os
 .Sh NAME
 .Nm inline-detox
 .Nd clean up filenames (stream-based)
 .Sh SYNOPSIS
 .Nm
-.Op Fl hnLrv
-.Op Fl s Ar sequence
 .Op Fl f Ar configfile
+.Op Fl s Ar sequence
+.Op Fl v
 .Ar
+.Nm
+.Op Fl L
+.Op Fl f Ar configfile
+.Op Fl v
+.Nm
+.Op Fl h | -help
+.Nm
+.Op Fl V
 .Sh DESCRIPTION
 The
 .Nm
@@ -44,15 +52,13 @@ Use
 .Ar configfile 
 instead of the default configuration files for loading translation
 sequences.  No other config file will be parsed.
-.It Fl h -help
+.It Fl h, -help
 Display helpful information.
 .It Fl L
 List the currently available sequences.  When paired with
 .Fl v
 this option shows what filters are used in each sequence and any
 properties applied to the filters.
-.It Fl r
-Recurse into subdirectories.
 .It Fl s Ar sequence
 Use
 .Ar sequence 
@@ -105,7 +111,7 @@ listing any changes and returning the result to STDOUT.
 .Xr detoxrc 5 ,
 .Xr detox.tbl 5 .
 .Sh HISTORY
-detox 
+.Nm
 was originally designed to clean up files that I had received from
 friends which had been created using other operating systems.  It's
 trivial to create a filename with spaces, parenthesis, brackets, and
@@ -117,7 +123,7 @@ to clean up these files.
 .Sh AUTHORS
 .Nm
 was written by
-.An "Doug Harple" .
+.An Doug Harple .
 .Sh BUGS
 .Pp
 Long options don't work under Solaris or Darwin.
