--- a/man/detox.1
+++ b/man/detox.1
@@ -6,7 +6,7 @@
 .\" For the full copyright and license information, please view the LICENSE
 .\" file that was distributed with this source code.
 .\" 
-.Dd February 13, 2021
+.Dd February 15, 2021
 .Dt DETOX 1
 .Os
 .Sh NAME
@@ -32,10 +32,11 @@
 .Sh DESCRIPTION
 The
 .Nm
-utility renames files to make them easier to work with.  It removes
-spaces and other such annoyances.  It'll also translate or cleanup
-Latin-1 (ISO 8859-1) characters encoded in 8-bit ASCII, Unicode
-characters encoded in UTF-8, and CGI escaped characters.
+utility renames files to make them easier to work with under Unix and Unix-like
+opertating systems.  It replaces characters that make it hard to type out a
+filename with dashes and underscores.  It also provides transliteration-based
+filters, converting ISO8859-1 or UTF-8 to 7-bit ASCII, in part or in whole.  An
+additional filter unescapes CGI-escaped filenames.
 .Ss Sequences
 .Nm
 is driven by a configurable series of filters, called a sequence.
@@ -43,12 +44,20 @@ Sequences are covered in more detail in
 .Xr detoxrc 5
 and are discoverable with the
 .Fl L
-option.  Some examples of default sequences are
+option.  The default sequence will run the
+.Cm safe
+and
+.Cm wipeup
+filters.  Other examples of pre-configured sequences are
 .Cm iso8859_1
 and
-.Cm utf_8 .
+.Cm utf_8 ,
+which both provide transliteration to ASCII and then finish with the 
+.Cm safe
+and
+.Cm wipeup
+filters.
 .Ss Options
-The main options:
 .Bl -tag -width Fl
 .It Fl f Ar configfile
 Use 
@@ -71,7 +80,8 @@ Recurse into subdirectories.
 .It Fl s Ar sequence
 Use
 .Ar sequence 
-instead of default.
+instead of
+.Cm default .
 .It Fl -special
 Works on special files (including links).  Normally 
 .Nm
@@ -83,18 +93,20 @@ Show the current version of
 .Nm .
 .El
 .Sh FILES
-.Bl -tag -width iso8859_1.tbl -compact
-.It Pa detoxrc
+.Bl -tag -width Fl
+.It Pa /etc/detoxrc
 The system-wide detoxrc file.
 .It Pa ~/.detoxrc
 A user's personal detoxrc.  Normally it extends the system-wide
 detoxrc, unless
 .Fl f
 has been specified, in which case, it is ignored.
-.It Pa iso8859_1.tbl
-The default ISO 8859-1 translation table.
-.It Pa unicode.tbl
-The default Unicode (UTF-8) translation table.
+.It Pa /usr/share/detox/safe.tbl
+The default safe character translation table.
+.It Pa /usr/share/detox/iso8859_1.tbl
+The default ISO 8859-1 transliteration table.
+.It Pa /usr/share/detox/unicode.tbl
+The default Unicode transliteration table, used by the UTF-8 filter.
 .El
 .Sh EXAMPLES
 .Bl -tag -width Fl
@@ -123,6 +135,12 @@ within FreeBSD and Linux, and cause problems when you go to access
 them.  I created
 .Nm
 to clean up these files.
+.Pp
+Version 2.0 stepped back from transliteration out of the box, instead focusing
+on ease of use.  The primary motivations for this were user-provided feedback,
+and the fact that many modern Unix-like OSs use UTF-8 as their primary
+character set.  Transliterating from UTF-8 to ASCII in this scenario is lossy
+and pointless.
 .Sh AUTHORS
 .Nm
 was written by
