Fix typos and static analysis warnings

--- a/man/inline-detox.1
+++ b/man/inline-detox.1
@@ -34,7 +34,7 @@
 The
 .Nm
 utility generates new filenames to make them easier to work with under Unix and
-Unix-like opertating systems.  It replaces characters that make it hard to type
+Unix-like operating systems.  It replaces characters that make it hard to type
 out a filename with dashes and underscores.  It also provides
 transliteration-based filters, converting ISO8859-1 or UTF-8 to 7-bit ASCII, in
 part or in whole.  An additional filter unescapes CGI-escaped filenames.
