Finish cleaning up man pages (resolves #22)

--- a/man/detox.1
+++ b/man/detox.1
@@ -111,9 +111,9 @@ The default Unicode transliteration table, used by the UTF-8 filter.
 .El
 .Sh EXAMPLES
 .Bl -tag -width Fl
-.It Nm Fl s Ar iso8859_1 Fl r Fl v Fl n Pa /tmp/new_files
+.It Nm Fl s Ar lower Fl r Fl v Fl n Pa /tmp/new_files
 Will run the sequence
-.Ar iso8859_1
+.Ar lower
 recursively, listing any changes, without changing anything, on the
 files of
 .Pa /tmp/new_files .
