Run mandoc lint checker on man pages (#22)

--- a/man/detox.1
+++ b/man/detox.1
@@ -124,12 +124,12 @@ showing their filters and options.
 .El
 .Sh SEE ALSO
 .Xr inline-detox 1 ,
-.Xr detoxrc 5 ,
 .Xr detox.tbl 5 ,
+.Xr detoxrc 5 ,
 .Xr ascii 7 ,
 .Xr iso_8859-1 7 ,
 .Xr unicode 7 ,
-.Xr utf-8 7 .
+.Xr utf-8 7
 .Sh HISTORY
 .Nm
 was originally designed to clean up files that I had received from
