--- a/man/detox.tbl.5
+++ b/man/detox.tbl.5
@@ -41,7 +41,7 @@ same rules that apply to sscanf apply here.
 Translation can be a string or a quoted string, with either single or
 double quotes.
 .El
-.Sh EXAMPLE
+.Sh EXAMPLES
 The following example shows a portion of a
 .Ar safe
 table, with only a few character replacements specified.
@@ -115,7 +115,7 @@ for more details on the various filter types.
 .Xr ascii 7 ,
 .Xr iso_8859-1 7 ,
 .Xr unicode 7 ,
-.Xr utf-8 7 .
+.Xr utf-8 7
 .Sh AUTHORS
 detox was written by
 .An "Doug Harple" .
