--- a/man/inline-detox.1
+++ b/man/inline-detox.1
@@ -117,12 +117,12 @@ listing any changes and returning the result to the output stream.
 .El
 .Sh SEE ALSO
 .Xr detox 1 ,
-.Xr detoxrc 5 ,
 .Xr detox.tbl 5 ,
+.Xr detoxrc 5 ,
 .Xr ascii 7 ,
 .Xr iso_8859-1 7 ,
 .Xr unicode 7 ,
-.Xr utf-8 7 .
+.Xr utf-8 7
 .Sh HISTORY
 .Nm
 was originally designed to clean up files that I had received from
